	 2.6.16 - 2.6.21 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.40.11-sun1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
	 removed cwd "./" (refer to Bugzilla 14399).
       * File join has been disabled in this release, refer to Bugzilla 16929.
 

Severity   : normal
Bugzilla   : 16080
Description: more cleanup in mds_lov
Details    : not send LOV EA under replay, we can't know about they size at this
             time. Don't allow client connect to mds before any ost connected,
             for avoid problems with LOV EA size and returning EIO to client.

Severity   : enhancement
Bugzilla   : 11826
Description: Interoperability at server side (Disk interoperability)

Severity   : enhancement
Bugzilla   : 17201
Description: Update to RHEL5 kernel-2.6.18-92.1.17.el5.
 
Severity   : enhancement
Bugzilla   : 17458
Description: Update to SLES10 SP2 kernel-2.6.16.60-0.31.

Severity   : enhancement
Bugzilla   : 14166
Description: New client IO stack (CLIO).

Severity   : enhancement
Bugzilla   : 15393
Description: Commit on sharing. Eliminate inter-client dependencies between
	     uncommitted transactions by doing transaction commits.
	     Thereby clients may recovery independently.

Severity   : normal
Frequency  : Create a symlink file with a very long name
Bugzilla   : 16578
Description: ldlm_cancel_pack()) ASSERTION(max >= dlm->lock_count + count)
Details    : If there is no extra space in the request for early cancels,
             ldlm_req_handles_avail() returns 0 instead of a negative value.

Severity   : enhancement
Bugzilla   : 1819
Description: Add /proc entry for import status
Details    : The mdc, osc, and mgc import directories now have
	     an import directory that contains useful import data for debugging
	     connection problems.

Severity   : enhancement
Bugzilla   : 15966
Description: Re-disable certain /proc logging